--- a/popup.html
+++ b/popup.html
@@ -49,7 +49,7 @@
 
       .button-group {
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
         margin-bottom: 15px;
       }
 
@@ -90,8 +90,6 @@
     </div>
 
     <div class="button-group">
-      <button id="textToHex">Văn bản → Hex</button>
-      <button id="hexToText">Hex → Văn bản</button>
       <button id="clearAll">Xóa tất cả</button>
     </div>
 
